feat: add dashboard all task

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Toastify__toast-container {
+  z-index: 9999; /* Set a high value to ensure it appears above other elements */
+}
